--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -9,7 +9,7 @@ Include links to relevant sites and sheets within local directories >
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link rel="stylesheet" href="StarterCode/static/css/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <! the body tag contains the document's body (i.e. items to be presented) >
@@ -21,7 +21,7 @@ Include links to relevant sites and sheets within local directories >
         <! this container holds the little UFO/text in the upper left >
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
-            <img class="nav-ufo" src="StarterCode/static/images/ufo.svg">
+            <img class="nav-ufo" src="static/images/ufo.svg">
           </a>
         </div>
         
@@ -85,8 +85,8 @@ Include links to relevant sites and sheets within local directories >
   <!-- <script src="B:/HomeWork/14-javascript/javascript-challenge/UFO-level-1/StarterCode/static/js/data.js"></script>
   <script src="B:/HomeWork/14-javascript/javascript-challenge/UFO-level-1/StarterCode/static/js/app.js"></script> -->
 
-  <script src="StarterCode/static/js/data.js"></script>
-  <script src="StarterCode/static/js/app.js"></script>
+  <script src="static/js/data.js"></script>
+  <script src="static/js/app.js"></script>
 </body>
 
 </html>
