--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -9,7 +9,7 @@ Include links to relevant sites and sheets within local directories >
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link rel="stylesheet" href="StarterCode/static/css/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <! the body tag contains the document's body (i.e. items to be presented) >
@@ -22,7 +22,7 @@ Include links to relevant sites and sheets within local directories >
         <! this container holds the little UFO/text in the upper left >
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
-            <img class="nav-ufo" src="StarterCode/static/images/ufo.svg">
+            <img class="nav-ufo" src="static/images/ufo.svg">
           </a>
         </div>
         
@@ -48,7 +48,7 @@ Include links to relevant sites and sheets within local directories >
                     <ul class="list-group" id="filters">
 
                       <li class="filter list-group-item">
-                        <label for="dropdown">Enter Filter Item</label>
+                        <label for="dropdown">Enter Filter Criterion</label>
                         <select id="d3-dropdown" type="button" class="btn btn-default">
                         <option value="first">Date/Time</option>
                         <option value="second">City</option>
@@ -59,7 +59,7 @@ Include links to relevant sites and sheets within local directories >
                       </li>
 
                       <li class="filter list-group-item">
-                        <label for="date">Enter Filter Criterion</label>
+                        <label for="date">Enter Filter Values</label>
                         <input class="form-control" id="datetime" type="text" placeholder="Filter">
                       </li>
 
@@ -67,21 +67,6 @@ Include links to relevant sites and sheets within local directories >
                   </div>
 
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-
-                <!-- <ul style="list-style-type:none;"> -->
-                <!-- <li class = "filter dropdown">
-                <label for="dropdown">Filter</label>
-                <select id="d3-dropdown" type="button" class="btn btn-default">
-                <option value="first">Date/Time</option>
-                <option value="second">City</option>
-                <option value="third">State</option>
-                <option value="forth">Country</option>
-                <option value="fifth">Shape</option>
-                </select>
-                </li> -->
-                <!-- </ul> -->
-                  <!-- <p id="selected-dropdown"></p> -->
-
 
 
                 </form>
@@ -118,8 +103,8 @@ Include links to relevant sites and sheets within local directories >
   <!-- <script src="B:/HomeWork/14-javascript/javascript-challenge/UFO-level-1/StarterCode/static/js/data.js"></script>
   <script src="B:/HomeWork/14-javascript/javascript-challenge/UFO-level-1/StarterCode/static/js/app.js"></script> -->
 
-  <script src="StarterCode/static/js/data.js"></script>
-  <script src="StarterCode/static/js/app.js"></script>
+  <script src="static/js/data.js"></script>
+  <script src="static/js/app.js"></script>
 </body>
 
 </html>
